--- a/tools/gestenrekorder/src/app/dropdown/dropdown.component.scss
+++ b/tools/gestenrekorder/src/app/dropdown/dropdown.component.scss
@@ -5,22 +5,21 @@
   border-radius: 4px;
   padding: 10px;
   color: blue;
-  width: 100%;
   z-index: 9999;
 }
 
-.dropdown-button {
+.dropdown_button {
   background-color: transparent;
   color: blue;
   border: none;
   cursor: pointer;
   padding: 10px 20px;
+  width: 300px;
 }
 
 .dropdown-button:hover {
-  color: darkblue; /* Hover-Effekt für den Button-Text */
+  color: darkblue;
 }
 
 .dropdown-content {
-  padding: 20px;
 }
