--- a/tools/gestenrekorder/src/app/track-component/track-component.component.scss
+++ b/tools/gestenrekorder/src/app/track-component/track-component.component.scss
@@ -1,24 +1,22 @@
 .track {
     &__container {
-        position: fixed;
+        position: relative;
         bottom: 0;
         right: 0;
         border-radius: 4px;
         padding: 8px;
-        margin: 8px;
         background-color: white;
         box-sizing: border-box;
         border: 1px solid blue;
     }
 
     &__title {
-        margin-top: 0;
         font-size: 16px;
         color: blue;
     }
 
     &__table {
-        width: 100%; /* Vollständige Breite des Containers */
+        width: 100%;
         border-collapse: collapse;
 
         th, td {
